# fyp

./: README.md  README.md~  out_camera_data.xml
Embedded/: .gitignore  download.jlink  download.sh  stm32f4.uvprojx
Embedded/bsp/inc/: BSP_ADC.h  BSP_CAN.h  BSP_DMA.h  BSP_DWT.h  BSP_GPIO.h  BSP_I2C.h  BSP_NVIC.h  BSP_SPI.h  BSP_TIM.h  BSP_UART.h
Embedded/bsp/src/: BSP_ADC.c  BSP_CAN.c  BSP_DMA.c  BSP_DWT.c  BSP_GPIO.c  BSP_I2C.c  BSP_NVIC.c  BSP_SPI.c  BSP_TIM.c  BSP_UART.c
Embedded/core/: system_stm32f4xx.c
Embedded/driver/inc/: Driver_Adis16.h  Driver_Chassis.h  Driver_Common.h  Driver_Dbus.h  Driver_Encoder.h  Driver_Flash.h  Driver_Gimbal.h  Driver_Gun.h  Driver_Judge.h  Driver_Led.h  Driver_MPU6050.h  Driver_Menu.h  Driver_Monitor.h  Driver_Pinout.h  Driver_ST7735.h  Driver_Sender.h  Driver_Servo.h  Driver_Simulator.h  font.h
Embedded/driver/src/: Driver_ADIS16.c  Driver_Chassis.c  Driver_Dbus.c  Driver_Encoder.c  Driver_Flash.c  Driver_Gimbal.c  Driver_Gun.c  Driver_Judge.c  Driver_Led.c  Driver_MPU6050.c  Driver_Menu.c  Driver_Monitor.c  Driver_ST7735.c  Driver_Sender.c  Driver_Simulator.c
Embedded/user/inc/: PID.h  external.h  main.h  menu.h  param.h  stm32f4xx_it.h
Embedded/user/src/: external.c  main.c  menu.c  pid.c  stm32f4xx_it.c
Linux/lib/PID_lib/: pid.cpp  pid.h
Linux/lib/SRUKF_lib/: SRUKF.cpp  SRUKF.h
Linux/lib/linux_socket/: Makefile  simple_client  simple_client_main.cpp  simple_server  simple_server_main.cpp
Linux/lib/linux_socket/libsocket/: simple_client_main.cpp  simple_server_main.cpp
Linux/lib/marker_lib/: Marker.cpp  Marker.h  MarkerDetector.cpp  MarkerDetector.h
Linux/lib/math_lib/: math_vector.h
Linux/lib/serial_com_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  libserial_port.so.1.0  serial_port.cpp  serial_port.h
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/bluefox2/: Bluefox2DynConfig.h  SetExposeSrv.h  SetExposeSrvRequest.h  SetExposeSrvResponse.h
catkin_ws/devel/include/dji_api/: api_accelerate.h  api_ctrl_data.h  api_gimbal.h  api_gps.h  api_magnetic.h  api_quaternion.h  api_rc.h  api_velocity.h  api_wrench.h
catkin_ws/devel/include/dji_pid/: move_target.h  pid_ctrl_data.h
catkin_ws/devel/include/dji_sdk/: A3GPS.h  A3RTK.h  Acceleration.h  ActivationRequest.h  ActivationResponse.h  AttitudeControlRequest.h  AttitudeControlResponse.h  AttitudeQuaternion.h  CameraActionControlRequest.h  CameraActionControlResponse.h  Compass.h  DroneArmControlRequest.h  DroneArmControlResponse.h  DroneTaskAction.h  DroneTaskActionFeedback.h  DroneTaskActionGoal.h  DroneTaskActionResult.h  DroneTaskControlRequest.h  DroneTaskControlResponse.h  DroneTaskFeedback.h  DroneTaskGoal.h  DroneTaskResult.h  FlightControlInfo.h  Gimbal.h  GimbalAngleControlRequest.h  GimbalAngleControlResponse.h  GimbalSpeedControlRequest.h  GimbalSpeedControlResponse.h  GlobalPosition.h  GlobalPositionControlRequest.h  GlobalPositionControlResponse.h  GlobalPositionNavigationAction.h  GlobalPositionNavigationActionFeedback.h  GlobalPositionNavigationActionGoal.h  GlobalPositionNavigationActionResult.h  GlobalPositionNavigationFeedback.h  GlobalPositionNavigationGoal.h  GlobalPositionNavigationResult.h  LocalPosition.h  LocalPositionControlRequest.h  (+81 more)
catkin_ws/devel/include/dji_sdk_web_groundstation/: MapNavSrvCmd.h  WebWaypointReceiveAction.h  WebWaypointReceiveActionFeedback.h  WebWaypointReceiveActionGoal.h  WebWaypointReceiveActionResult.h  WebWaypointReceiveFeedback.h  WebWaypointReceiveGoal.h  WebWaypointReceiveResult.h
catkin_ws/devel/include/n3_sdk/: A3GPS.h  A3RTK.h  Acceleration.h  Activation.h  ActivationRequest.h  ActivationResponse.h  Compass.h  (+144 more)
catkin_ws/src/dji_api/: CMakeLists.txt
catkin_ws/src/dji_cv/: CMakeLists.txt  package.xml
catkin_ws/src/dji_fusion/: CMakeLists.txt  package.xml
catkin_ws/src/dji_tf/: CMakeLists.txt  package.xml
catkin_ws/src/ekf_node/: CMakeLists.txt  CMakeLists.txt~
catkin_ws/src/flight_logic/: CMakeLists.txt  CMakeLists.txt~
catkin_ws/src/keyboard_control/: CMakeLists.txt  package.xml
catkin_ws/src/marker_detector/: CMakeLists.txt  CMakeLists.txt~
catkin_ws/src/pid_controller/: CMakeLists.txt
catkin_ws/src/pid_controller/include/EKF_lib/: README.md  ekf.cpp  math_uilts.h
catkin_ws/src/pid_controller/include/PID_lib/: pid.cpp
catkin_ws/src/pid_controller/include/estimate_lib/: README.md  ekf.h  ekf_estimate.cpp  math_uilts.cpp  math_uilts.h
catkin_ws/src/pid_controller/include/math_lib/: .constants.h.swp  .math_matrix.h.swp  .math_quaternion.h.swp  math_basic.c  math_basic.h  math_lib.h  math_matrix.c  math_matrix.h  math_rotation.h  math_vector.c
catkin_ws/src/pid_controller/msg/: pid_ctrl_data.msg  stick_data.msg
catkin_ws/src/pid_controller/src/: pid_controller.cpp  pid_controller.cpp~
catkin_ws/src/serial/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/ugv/: CMakeLists.txt  CMakeLists.txt~
catkin_ws/src/ugv_commander/: CMakeLists.txt
catkin_ws/src/velo_driver/: contributors.txt  velodyne_driver.sublime-workspace
(+563 files in other folders)
